[3/5][enterprise] Remove deprecated Integer constructor usage.